Add simple registration workflow

--- a/templates/creator.html
+++ b/templates/creator.html
@@ -15,7 +15,7 @@
         {% else %}
             <div class="list-group">
                 {% for creator in creators %}
-                    <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}" class="list-group-item">{{ creator.creator_name }}{% if creator.creator_role == "creator" %} <i class="bi bi-mortarboard"></i>{% endif %}</a>
+                    <a href="{{ url_for('show_creator', creator_id=creator.creator_id)}}" class="list-group-item">{{ creator.creator_name }}{% if creator.creator_role == "creator" %} <i class="bi bi-mortarboard"></i>{% endif %}{% if creator.active == 0 %} <i class="bi bi-star"></i>{% endif %}</a>
                 {% endfor %}
             </div>
         {% endif %}
