Twinkle, twinkle, little star

--- a/static/main_admin.css
+++ b/static/main_admin.css
@@ -5,7 +5,7 @@
 body {
     padding: 10px;
     margin: 10px;
-    background: url('/static/background_para.jpg') no-repeat center center fixed;
+    background: url('/static/background_admin.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
