--- a/templates/junction.html
+++ b/templates/junction.html
@@ -29,7 +29,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form action="{{ url_for('show_junctions_p', world_id=world.world_id) }}" method="POST">
+                        <form action="{{ url_for('show_junctions_p', world_id=world.world_id) }}" method="POST" id="form_new">
                             {{ form.csrf_token }}
                             <div class="form-group mt-2 mb-2">
                                 <label for="{{ form.description.name }}">{{ form.description.label }}</label>
@@ -43,10 +43,10 @@
                                 <label for="{{ form.room_dest.name }}">{{ form.room_dest.label }}</label>
                                 {{ form.room_dest(class="form-select") }}
                             </div>
-                            <button type="submit" class="btn btn-primary mt-4 mb-4">Create</button>
                         </form>
                     </div>
                     <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary mt-4 mb-4 btn-space" form="form_new">Create</button>
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                     </div>
                 </div>
