--- a/templates/stats.html
+++ b/templates/stats.html
@@ -22,14 +22,16 @@
             <li class="list-group-item">Solutions <span class="badge bg-secondary">{{ counts['solution'] }}</span></li>
         </ul>
 
-        <hr class="little mt-4 mb-4">
+        {% if current_user.is_authenticated %}
+            <hr class="little mt-4 mb-4">
 
-        {#  Show statistics about all stored files on S3 storage #}
-        <h4 class="mb-3">S3 Storage</h4>
-        <ul class="list-group">
-            {% for item in bucket_all %}
-                <li class="list-group-item">{{ item }} <span class="badge bg-secondary">{{ (bucket_all[item] / 1024 / 1024) | round(2) }} MB</span></li>
-            {% endfor %}
-        </ul>
+            {#  Show statistics about all stored files on S3 storage #}
+            <h4 class="mb-3">S3 Storage</h4>
+            <ul class="list-group">
+                {% for item in bucket_all %}
+                    <li class="list-group-item">{{ item }} <span class="badge bg-secondary">{{ (bucket_all[item] / 1024 / 1024) | round(2) }} MB</span></li>
+                {% endfor %}
+            </ul>
+        {%  endif %}
     </div>
 {% endblock %}
