--- a/templates/base.html
+++ b/templates/base.html
@@ -106,15 +106,15 @@
                             {% else %}
                                 Not logged in.
                             {% endif %}
+                            <br>
+                            <a class="link-dark" href="{{ url_for('show_release')}}">Version: {{ version }}</a>
                         </h6>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <h6 class="font-weight-bold">
-                            <a class="link-dark" href="{{ prefix }}/static/doc/index.html">Read Docs</a>,
-                            <a class="link-dark" href="{{ prefix }}/swagger">Show API</a>
-                            <br>
-                            <a class="link-dark" href="{{ url_for('show_contact')}}">Send Message</a>,
-                            <a class="link-dark" href="{{ url_for('show_release')}}">Version: {{ version }}</a>
+                            <a class="link-dark" href="{{ prefix }}/static/doc/index.html">Open Help</a><br>
+                            <a class="link-dark" href="{{ prefix }}/swagger">Show API</a><br>
+                            <a class="link-dark" href="{{ url_for('show_contact')}}">Send a Message</a>
                         </h6>
                     </div>
                 </div>
